syntax = "proto3";

package protocol;

option java_package = "org.tron.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "ProposalCreateContract"; //Specify the class name of the generated Java file
option go_package = "github.com/tronprotocol/grpc-gateway/core";

message ProposalCreateContract {
    bytes owner_address = 1;
    map<int64, int64> parameters = 2;
}